abstract and chapter 1 updates finished

--- a/chap1.tex
+++ b/chap1.tex
@@ -3,7 +3,7 @@ This chapter introduces ultra-intense lasers, gives applications of laser-accele
 
 \section{Lasers} \label{sec:lasers}
 
-The word laser should actually be written as ``LASER'' because it is an acronym: light amplification by stimulated emission of radiation. Stimulated emission refers to Albert Einstein's 1917 paper which suggested photons (particles of light) could ``stimulate'' atoms to produce identical photons \cite{Einstein_1917_Quantum}. These identical photons form a coherent light source which possess the same quantum-mechanical phase and wavelength. It wasn't until 1954 that Charles Townes and Arthur Schawlow first explored using stimulated emission to generate electromagnetic radiation\footnote{Electromagnetic radiation is just another word for light and is made up of oscillating electric and magnetic fields. The distance between adjacent wave crests in the fields is called the wavelength. Visible light has a wavelength between 400 and 700 nanometers and other forms of light (invisible to the naked eye) are similarly classified according to their wavelengths: radio, microwave, infra-red, ultra-violet, x-ray, gamma.} with a device called the \emph{maser} (because it produced \emph{microwave} wavelength light). In 1960, a similar device was constructed by Theodore Maiman at Hughes Research Laboratories that produced visible wavelength light\cite{Maiman_1960_Nature}. Maiman's device extended the maser to \emph{light} of different frequencies in what is now known as a \emph{laser}.
+The word laser should actually be written as ``LASER'' because it is an acronym: light amplification by stimulated emission of radiation. Stimulated emission refers to Albert Einstein's 1917 paper which suggested photons (particles of light) could ``stimulate'' atoms to produce identical photons \cite{Einstein_1917_Quantum}. These identical photons form a coherent light source which possess the same quantum-mechanical phase and wavelength. It wasn't until 1954 that Charles Townes and Arthur Schawlow first explored using stimulated emission to generate electromagnetic radiation\footnote{Electromagnetic radiation is just another word for light and is made up of oscillating electric and magnetic fields. The distance between adjacent wave crests in the fields is called the wavelength. Visible light has a wavelength between 400 and 700 nanometers and other forms of light (invisible to the naked eye) are similarly classified according to their wavelengths: radio, microwave, infra-red, ultra-violet, x-ray, gamma.} with a device called the \emph{maser} (because it produced \emph{microwave} wavelength light). In 1960, a similar device was constructed by Theodore Maiman at Hughes Research Laboratories that produced visible wavelength light \cite{Maiman_1960_Nature}. Maiman's device extended the maser to \emph{light} of different frequencies in what is now known as a \emph{laser}.
 
 \begin{figure}
 	\centering
@@ -61,13 +61,13 @@ The specifics of the depth-dose curve depend on the material that the particles 
 	\label{fig:bragg_curve}
 \end{figure}
  
-Here in Columbus, \gls{OSUCCC}, in collaboration with Nationwide Children's Hospital, opened a 55,000 square foot proton therapy center in December of 2023 \cite{OSU_CCC} that uses \gls{IMPT}. Despite all the aformentioned benefits of proton therapy, the intial cost is tremendous -- \gls{OSUCCC} was a 100 million dollar investment. The significant cost demonstrates the value this could bring to Central Ohio. The facility is even outfitted with the capability to perform FLASH therapy which is a newer, experimental form of proton therapy. Compared to conventional methods, FLASH uses much higher dose-rates (i.e. amount of dose per second) with much shorter exposure times (seconds) for the same total dose. The higher dose-rates have been shown to reduce radiation-induced toxicity in healthy tissues in pre-clinical trials \cite{Matuszak_2022_Onc} and is currently under clinical trials \cite{OSU_CCC}. 
+Here in Columbus, \gls{OSUCCC}, in collaboration with Nationwide Children's Hospital, opened a 55,000 square foot proton therapy center in December of 2023 \cite{OSU_CCC} that uses \gls{IMPT}. Despite all the aformentioned benefits of proton therapy, the intial cost is tremendous -- \gls{OSUCCC} was a 100 million dollar investment. The significant cost demonstrates the value this could bring to Central Ohio. The facility is even outfitted with the capability to perform FLASH\footnote{Despite its name, FLASH is not an acronyn.} therapy which is a newer, experimental form of proton therapy. Compared to conventional methods, FLASH uses much higher dose-rates (i.e. greater than 40 Gy/s instead of less than 1 Gy/s) with much shorter exposure times (fractions of a second instead of minutes) for the same total dose. The higher dose-rate has been shown to reduce radiation-induced toxicity in healthy tissues in pre-clinical trials \cite{Matuszak_2022_Onc} and is currently under clinical trials \cite{OSU_CCC}. 
 
-The conventional cyclotron accelerators used at \gls{OSUCCC} are extremely large and expensive which limits their availability to select locations globally. In recent years, it has been proposed that laser-based particle accelerators could be used to generate high energy protons. Just like FLASH therapy, laser-based sources are capable of delivering high dose-rates in extremely short exposure times. Also, laser facilities could in principle be smaller and less costly. On the other hand, the technology is not matured enough to be considered in the near future \cite{Linz_2016_LaPB}. Laser-based sources are typically only able to generate protons in the 10s of MeV reliably (as opposed to the 100s of MeV required for clinical operation), possess orders of magnitude smaller numbers of protons, and poor reproducibility of the laser pulse output. In addition, the conventional accelerators have already made significant strides in terms of reducing cost, increasing beam quality, and reducing size in recent years \cite{Linz_2016_LaPB} which is something laser-based sources will need to keep up with in the future. However, the potential of developing a smaller, lower cost, higher dose rate proton accelerator remains an important motivating factor for many laser-plasma physicists in the coming years.
+The conventional cyclotron accelerators used at \gls{OSUCCC} are extremely large and expensive which limits their availability to select locations globally. In recent years, it has been proposed that laser-based particle accelerators could be used to generate high energy protons. Just like FLASH therapy, laser-based sources are capable of delivering high dose-rates in extremely short exposure times. In fact, these dose-rates can be orders of magnitude higher ($10^7$ Gy/s \cite{Bin_2022_SciRep}) with significantly shorter exposure times (nanoseconds \cite{Bin_2022_SciRep}). Also, laser facilities could in principle be smaller and less costly. On the other hand, the technology is not matured enough to be considered in the near future \cite{Linz_2016_LaPB}. Laser-based sources are typically only able to generate protons in the 10s of MeV reliably (as opposed to the 100s of MeV required for clinical operation) and exhibit poor repeatability of the laser pulse output. In addition, the conventional accelerators have already made significant strides in terms of reducing cost, increasing beam quality, and reducing size in recent years \cite{Linz_2016_LaPB} which is something laser-based sources will need to keep up with in the future. However, the potential of developing a smaller, lower cost, higher dose rate proton accelerator remains an important motivating factor for many laser-plasma physicists in the coming years.
 
-\subsection{Proton Radiography and Laser Fusion}
+\subsection{Laser Fusion and Proton Radiography}
 
-All of us are familiar with the use of visible light to image things\footnote{Cameras send out a flash of light and the reflected light off an object forms an image on the camera}. Other frequencies of light not visible to the naked eye are used all the time to image things as well. High frequency sources like x-rays are used at the dentist due to their ability to probe matter within your body. Radio waves reflect well off of electrically conductive materials like the metals in vehicles which make them ideal for military applications. In an similar way, particles can be used to image objects by analyzing how they interact. Electron microscopes have been used extensively in the past century to image materials at a much higher resolution than an ordinary visible light microscope. From \autoref{fig:bragg_curve}, we know that protons interact with matter in a different\footnote{Protons interact differently because they are charged and have mass unlike electromagnetic radiation} way than electromagnetic radiation like x-rays. These differences can be exploited to image things that cannot be done well with other types of radiation \cite{Schaeffer_2023_RevMod}.
+Another use for protons is a diagnostic for laser fusion experiments. These use high powered lasers to compress a millimeter sized frozen pellet of hydrogen fuel\footnote{Specifically, heavier isotopes of hydrogen called deuterium and tritium are used} to such high temperatures and pressures that the atomic nuclei fuse together into helium. The sun is an example of a high temperature and pressure environment that sustains fusion as its vast source of energy, but milder conditions on Earth's surface don't allow this fusion process to naturally happen. 
 
 \begin{figure}
 	\centering
@@ -76,13 +76,17 @@ All of us are familiar with the use of visible light to image things\footnote{Ca
 	\label{fig:inertial_fusion}
 \end{figure}
 
-One example of proton radiography using laser-accelerated protons is through the \gls{NIF-ARC}. As it's name implies, \gls{NIF-ARC} is typically used as light source to collect radiograph images of laser fusion experiments at NIF. These fusion experiments involve using a high powered lasers to compress a millimeter sized frozen pellet of hydrogen fuel (specifically, heavier isotopes of hydrogen called deuterium and tritium) to such high temperatures and pressures that the atomic nuclei fuse together into helium. The sun is an example of a high temperature and pressure environment that is able to sustain fusion as its vast source of energy, but we must be a little bit more clever on Earth to obtain conditions similar to the core of our sun. A similar capability to NIF-ARC exists at the \gls{LLE}'s \gls{OMEGA-EP}. The \gls{OMEGA-EP} provides diagnostics for the main OMEGA laser which performs fusion experiments by directly irradiating a fusion pellet. This is in contrast to the \gls{NIF} which indirectly compresses a fusion pellet by first irradiating a gold can that surrounds the pellet. These approaches are aptly called indirect and direct drive fusion and are depicted in \autoref{fig:inertial_fusion}. Proton radiography has been demonstrated successfully at the \gls{NIF} through \gls{NIF-ARC} \cite{Simpson_2021_PPCF} and at OMEGA through \gls{OMEGA-EP} \cite{Zylstra_2012_RSI} through \gls{TNSA} proton beams produced from laser-irradiated metallic foils.
+The fusion efforts are primarily conducted at two institutions in the United States. At the University of Rochester's \gls{LLE}, the OMEGA laser directly irradiates a fusion pellet in an approach called \emph{direct drive}. This is in contrast to the \gls{NIF} which indirectly compresses a fusion pellet by first irradiating a surrounding gold can in an approach called \emph{indirect drive}. These two approaches along with various fusion stages are illustrated in \autoref{fig:inertial_fusion}.
 
-Conventional sources of protons for radiography purposes are from linear accelerators like the pRad at \gls{LANL}. \gls{LANL} uses \gls{RF} waves of around 200 MHz to accelerate particles up to 800 MeV \cite{LANL_PRAD}. The limitation of conventional \gls{RF} accelerators is the relatively low frequency. If we take the reciprocal of 200 MHz, we find that the separation between individual waves (the period) is around 5 nanoseconds\footnote{This may seem like a short time, but on the scale of femtosecond and picosecond ultra-intense pulses, this is a thousand or a million times longer!}. If one wanted to take proton radiographs of some experiment happening on a picosecond timescale, the conventional accelerator would not work. On the other hand, lasers typically used for laser-plasma experiments are in the infrared and have wavelengths of around 1 micron. A quick calculation tells us that the period is only around 3 femtoseconds. Since the lasers are pulsed at 3 femtoseconds, the emitted protons would also be pulsed at 3 femtoseconds which would theoretically allow us to capture 1 proton radiograph every 3 femtoseconds. Another advantage of these laser-accelerated proton beams is that they are emitted from a very small spot, on the order of microns, which is beneficial for obtaining a higher quality image \cite{Schaeffer_2023_RevMod}.
+While visible light is typically used to image objects\footnote{This is how your typical camera works. Other frequencies of light not visible to the naked eye are used all the time to image things as well. High frequency sources like x-rays are used at the dentist due to their ability to probe matter within your body. Radio waves reflect well off of electrically conductive materials like the metals in vehicles which make them ideal for military applications.}, massive particles like electrons and protons can also be used. Electron microscopes have been used extensively in the past century to image materials at a much higher resolution than an ordinary visible light microscope. From \autoref{fig:bragg_curve}, we know that protons interact with matter in a different\footnote{Protons interact differently because they are charged and have mass unlike electromagnetic radiation} way than electromagnetic radiation like x-rays. These differences can be exploited to image things that cannot be done well with other types of radiation \cite{Schaeffer_2023_RevMod}.
+
+For a laser fusion experiment with a nanosecond laser, an even shorter burst of protons would be needed to capture a ``still'' image or radiograph of the target at peak compression. Conventional sources of protons for radiography purposes are from linear accelerators like the pRad at \gls{LANL}. \gls{LANL} uses \gls{RF} waves of around 200 MHz to accelerate particles up to 800 MeV \cite{LANL_PRAD}. The limitation of conventional \gls{RF} accelerators is the relatively low frequency. If we take the reciprocal of 200 MHz, we find that the separation between individual waves (the period) is around 5 nanoseconds. In contrast, laser-driven proton sources can be generated in picosecond bursts through the \gls{TNSA} mechanism. Another advantage of these laser-accelerated proton beams is that they are emitted from a very small spot, on the order of microns, which is beneficial for obtaining a higher quality image \cite{Schaeffer_2023_RevMod}.
+
+With these considerations in mind, proton radiography has been demonstrated successfully at the \gls{NIF} through \gls{NIF-ARC} \cite{Simpson_2021_PPCF} and at OMEGA through \gls{OMEGA-EP} \cite{Zylstra_2012_RSI}. Both \gls{NIF-ARC} and \gls{OMEGA-EP} use a picosecond scale laser to produce \gls{TNSA} proton beams from laser-irradiated metallic foils and allow scientists to image fusion experiments on a timescale that would not be otherwise possible.
 
 \subsection{Materials Characterization}
 
-While protons can generate images through radiography, they can also more generally tell us information about materials as a whole through a process called \gls{IBA}. \gls{IBA} allows scientists to probe material composition and surface structures with MeV ion beams which are appealing partly due to their non-destructive nature (comparatively to sources like x-rays) \cite{Passoni_2019_SciRep}. \gls{IBA} is currently implemented through old Van de Graaf and Tandem accelerator technology, but Passoni \cite{Passoni_2019_SciRep} argues that \gls{TNSA} proton beams can achieve the same result in a more compact, portable, and cheaper setup.
+While protons can generate images through radiography, they can more generally tell us information about materials through a process called \gls{IBA}. \gls{IBA} allows scientists to probe material composition and surface structures with MeV ion beams which are appealing partly due to their non-destructive nature (comparatively to sources like x-rays) \cite{Passoni_2019_SciRep}. \gls{IBA} is currently implemented through old Van de Graaf and Tandem accelerator technology, but Passoni \cite{Passoni_2019_SciRep} argues that \gls{TNSA} proton beams can achieve the same result in a more compact, portable, and cheaper setup.
 
 \begin{figure}
 	\centering
