--- a/chap2.tex
+++ b/chap2.tex
@@ -47,16 +47,16 @@ and has a minimum value at the \emph{beam waist} $w(0) \equiv w_0$ at the focal 
 	\label{fig:gaussian_beam}
 \end{figure}
 
-The peak intensity is related to the electric field by $I_0 = \frac{1}{2} \epsilon_0 c E_0^2$ and \cref{eq:gaussian_beam} shows that the intensity decays as $I(x, r) = I_0 (w_0 / w(x))^2 \exp(-2 r^2 / w(x)^2)$ with increasing $r$ and $x$. If we integrate this intensity distribution over the entire $y-z$ plane (at $x=0$), we obtain the peak power $P_0 = \frac{\pi \omega_0^2}{2} I_0$. Furthermore, we can integrate the power over the pulse duration pulse has a $\sin^2(t)$ envelope\footnote{As with most things in physics, when there's an oscillating or pulsed quantity, it typically follows a sinusoidal distribution. The pulse envelope is related to the intensity which is proportional to the square of the electric field. It is possible for the pulse shape to be slightly different (like a gaussian function), but the expressions for energy and pulse \gls{FWHM} do not change significantly.}) to obtain the total energy in the pulse 
+The peak intensity is related to the electric field by $I_0 = \frac{1}{2} \epsilon_0 c E_0^2$ and \cref{eq:gaussian_beam} shows that the intensity decays as $I(x, r) = I_0 (w_0 / w(x))^2 \exp(-2 r^2 / w(x)^2)$ with increasing $r$ and $x$. If we integrate this intensity distribution over the entire $y-z$ plane (at $x=0$), we obtain the peak power $P_0 = \frac{\pi \omega_0^2}{2} I_0$. Furthermore, we can integrate the power over the pulse duration (assuming a $\sin^2(t)$ envelope\footnote{As with most things in physics, when there's an oscillating or pulsed quantity, it typically follows a sinusoidal distribution. The pulse envelope is related to the intensity which is proportional to the square of the electric field. It is possible for the pulse shape to be slightly different (like a gaussian function), but the expressions for energy and pulse \gls{FWHM} do not change significantly.}) to obtain the total energy in the pulse 
 
 \begin{equation}
 	E = \frac{\pi \omega_0^2}{2} I_0 \tau_\text{fwhm} \label{eq:gaussian_beam_energy}
 \end{equation}
-where $\tau_\text{fwhm}$ is the full-width half-max (half the pulse duration for a $sin^2(t)$ pulse envelope). 
+where $\tau_\text{fwhm}$ is the full-width half-max (half the pulse duration for a $\sin^2(t)$ pulse envelope). 
 
 \subsection{Single Particle Motions}
 
-Electrostatics is governed by the Maxwell's equations which describe the allowed wave-like solutions for electric and magnetic fields in both matter and vacuum. The most relevant equation in this section is Gauss' Law or Poisson's Equation which can be expressed as 
+Electrostatics is governed by Maxwell's equations which describe the allowed wave-like solutions for electric and magnetic fields in both matter and vacuum. The most relevant equation in this section is Gauss' Law or Poisson's Equation which can be expressed as 
 
 \begin{equation}
 	- \nabla^2 \phi = \nabla \cdot \vec{E} \equiv \frac{\rho}{\epsilon_0} \label{eq:poisson}
@@ -260,7 +260,7 @@ where $\tau \equiv (k L_p)^{1/3} \sin(\theta_i)$ takes into account both the sca
 \subsubsection{Brunel Heating}
 Resonance absorption only makes sense when the amplitude of the plasma oscillations $x_\text{osc} = v_\text{osc} / \omega = \frac{a_0 \lambda}{2 \pi}$ is less than the scale length $L_p$ \cite{Gibbon_2005_Plasma}. Otherwise there is not enough available space for the oscillations to take place. For $\lambda = \SI{0.8}{\mu \meter}$ and $a_0 = 1$, $x_\text{osc} = \SI{127}{\nano \meter}$. However, for extremely small scale-lengths, efficient electron heating can still be observed \cite{Grimes_1999_PRL}. Consequently, a different type of heating mechanism is responsible in this case (somewhat confusingly) called ``not so resonant, resonant absorption'' \cite{Brunel_1987_PRL}. This model, developed by Brunel, is also known as \emph{vacuum heating} and will be explained below. 
 
-Before explaining the Brunel mechanism, it is instructive to explain Corkum's 3-step model for \gls{HHG} \cite{Corkum_1993_PRL} should be reviewed\footnote{Readers may find this model more familiar due to the recent 2023 Nobel Physics Prize won by Ohio State's Pierre Agostini \cite{Nobel_2023} which utilized the ideas of this model to produce attosecond pulses}. This model involves a strong oscillating electric field $E(x) = E_0 \cos(\omega t)$ incident on an atom that ionizes an electron at $t = t^*$. Under the influence of the oscillating field, the (initially stationary) electron will gain  and lose energy by moving away from the atom and returning back toward the atom. When $t^* \neq n \pi$ for integer $n$, it is actually possible for the electron to return back to the atom with non-zero energy. In fact, when $\omega t^* \approx 17^\circ + n (180^\circ)$, the electron returns with an energy peaking at $3.17 U_p$ where $U_p$ is the ponderomotive potential given by \cref{eq:pond_potential}. Furthermore, modeling the ionization rate through quantum-mechanical tunneling of an electron through a Coulomb potential warped by the oscillating laser field, we also determine that the most probable energy for an electron is strongly peaked at the $3.17 U_p$ cutoff. In short, this model shows how a laser field can produce electrons with energy on the scale of the ponderomotive potential with high probability at a frequency of twice per optical cycle. 
+Before explaining the Brunel mechanism, it is instructive to explain Corkum's 3-step model for \gls{HHG} \cite{Corkum_1993_PRL}\footnote{Readers may find this model more familiar due to the recent 2023 Nobel Physics Prize won by Ohio State's Pierre Agostini \cite{Nobel_2023} which utilized the ideas of this model to produce attosecond pulses}. This model involves a strong oscillating electric field $E(x) = E_0 \cos(\omega t)$ incident on an atom that ionizes an electron at time $t=t^*$. Under the influence of the oscillating field, the (initially stationary) electron will gain  and lose energy by moving away from the atom and returning back toward the atom. When $t^* \neq n \pi$ for integer $n$, it is actually possible for the electron to return back to the atom with non-zero energy. In fact, when $\omega t^* \approx 17^\circ + n \cdot 180^\circ$, the electron returns with an energy peaking at $3.17 U_p$ where $U_p$ is the ponderomotive potential given by \cref{eq:pond_potential}. Furthermore, modeling the ionization rate through quantum-mechanical tunneling of an electron through a Coulomb potential warped by the oscillating laser field, we also determine that the most probable energy for an electron is strongly peaked at the $3.17 U_p$ cutoff. In short, this model shows how a laser field can produce electrons with energy on the scale of the ponderomotive potential with high probability at a frequency of twice per optical cycle. 
 
 The Brunel mechanism \cite{Brunel_1987_PRL} considers a laser field incident on a planar target at $x > 0$ and vacuum at $x < 0$. In order for the electrons to escape the target, there needs to be some component of the electric field in the $x$ direction. Thus, we need to consider oblique incidence and p-polarization just like with resonance absorption. When the plasma scale length is small, the electrons will be able to travel far enough in the $x < 0$ region to escape the plasma entirely and gain energy on the order of $U_p$ in a similar fashion to Corkum's model \cite{Corkum_1993_PRL}. Electrons returning to the target at just the right time will penetrate deeper than the skin depth $l_s \approx c / \omega_p$ and be inaccessible to the laser field \cite{Gibbon_2005_Plasma}. These \emph{hot electrons}, generated primarily on the front surface of the target, will provide the energy to heat the remainder of the overdense target region that the laser field cannot directly access. 
 
