--- a/chap7.tex
+++ b/chap7.tex
@@ -8,6 +8,6 @@ In \autoref{ch:5}, I explained my main contribution to the research group during
 
 In \autoref{ch:6}, I overview the experimental laser facility at the Wright-Patterson Air Force Base for which \autoref{ch:5} was based on. I described my contribution to the project: a graphical user interface that automatically processed data from the lab and suggested new laser parameters to explore based on certain criteria like maximum kinetic energy and total electron counts. Operating at 1 kHz, this system is capable of collecting around 3 orders of magnitude more data points than many other modern 1 Hz \emph{high} repetition-rate system that have been used in recent years \cite{Streeter_2025_Nat,Treffert_2022_APL}. This makes it particularly suitable for utilizing machine learning models like neural networks optimized for complex data. I demonstrated at the lab with my code that this type of optimization is possible, but the narrow region of parameter space that produced a good proton signal limited the applicability of my work. 
 
-While future laser facilities will be able to more readily access higher intensities that utilize radiation pressure acceleration mechanisms \cite{Macchi_2013_RevModPhys}, target normal sheath acceleration will continue to remain relevant for some time due to high repetition-rated systems that can produce vast quantities of data at a lower intensity. Continuously refreshing targets created from liquid micro-jets (like the one at Wright-Patt \cite{George_2019_HPLSE}) are getting better at supporting higher acquisition rates \cite{Treffert_2022_APL, Streeter_2025_Nat} which will allow scientists to leverage data to understand physical processes not yet understood from theory. I am proud to have contributed insights to the field of laser-driven proton acceleration by studying the double pulse enhanced target normal sheath acceleration mechanism, constructing synthetic datasets to understand what sorts of optimizations are possible, and realizing a basic optimization feedback loop. 
+While future laser facilities will more readily access higher intensities that utilize radiation pressure acceleration mechanisms \cite{Macchi_2013_RevModPhys}, target normal sheath acceleration will continue to remain relevant for some time due to high repetition-rated systems that can produce vast quantities of data at a lower intensity. Continuously refreshing targets created from liquid micro-jets (like the one at Wright-Patt \cite{George_2019_HPLSE}) are getting better at supporting higher acquisition rates \cite{Treffert_2022_APL, Streeter_2025_Nat} which will allow scientists to leverage data to understand physical processes not yet understood from theory. I am proud to have contributed insights to the field of laser-driven proton acceleration by studying the double pulse enhanced target normal sheath acceleration mechanism, constructing synthetic datasets to understand what sorts of optimizations are possible, and realizing a basic optimization feedback loop. 
 
-To expand on this work, one could try to develop a more comprehensive theory for the double pulse enhancement that justifies its implementation in the lab. After target stability improvements and data acquisition advancements, different laser and target properties (including the double pulse setup) could be varied to collect many data points. This could be used for machine learning efforts to not only better understand target normal sheath acceleration, but tune parameters to drive higher quality proton beams of a desired energy and angular spread. Due to recent advances in both machine learning and repetition-rated targetry, I am optimistic that future efforts will enable laser-plasma accelerators to be a viable alternative to conventional proton (and other types of radiation) accelerators to realize medical and scientific applications. 
+To expand on this work, one could try to develop a more comprehensive theory for the double pulse enhancement that justifies its implementation in the lab. After target stability improvements and data acquisition advancements, different laser and target properties (including the double pulse setup) could be varied to collect many data points. This could be used for machine learning efforts to not only better understand target normal sheath acceleration, but tune parameters to drive higher quality proton beams of a desired energy and flux. Due to recent advances in both machine learning and repetition-rated targetry, I am optimistic that future efforts will enable laser-plasma accelerators to be a viable alternative to conventional proton (and other types of radiation) accelerators to realize medical and scientific applications. 
