--- a/motivation.bib
+++ b/motivation.bib
@@ -17,6 +17,18 @@
 	url = {https://doi.org/10.1038/187493a0}
 }
 
+@article{Bin_2022_SciRep,
+	title = {A new platform for ultra-high dose rate radiobiological research using the BELLA PW laser proton beamline},
+	author = {Bin, J. and Obst-Huebl, L. and et al.},
+	journal = {Sci Rep},
+	volume = {12},
+	issue = {1484},
+	year = {2022},
+	month = {Jan},
+	doi = {10.1038/s41598-022-05181-3},
+	url = {https://doi.org/10.1038/s41598-022-05181-3}
+}
+
 @article{Arrigoni_2019_Photonics,
 	author = {Arrigoni, Marco and Tapié, Jean-Luc},
 	title = {Chirped Pulse Amplification},
